--- a/.github/workflows/k8s-ci-cd.yml-fe.yml
+++ b/.github/workflows/k8s-ci-cd.yml-fe.yml
@@ -70,7 +70,7 @@ jobs:
       - name: Build and push image
         uses: docker/build-push-action@v4
         with:
-          context: frontend
+          file: frontend/Dockerfile
           push: true
           tags: ${{ needs.prepair.outputs.image_name }}
 
