--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -21,10 +21,44 @@ node_modules
 build
 dist
 
-# misc
-.DS_Store
-
 .env*
 !.env.example
 
 *.log*
+.idea
+
+### NextJS template
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# next.js
+/.next/
+/out/
+
+# production
+/build
+
+# misc
+.DS_Store
+*.pem
+
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+
+# local env files
+.env*.local
+
+# vercel
+.vercel
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
