--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@codemirror/lang-rust": "6.0.1",
     "@emotion/react": "11.14.0",
     "@emotion/styled": "11.14.0",
+    "@fontsource/geist": "5.2.6",
     "@fontsource/roboto": "5.2.5",
     "@gear-js/api": "0.38.3",
     "@gear-js/react-hooks": "0.13.1",
@@ -33,18 +34,20 @@
     "clsx": "1.2.1",
     "dotenv": "^16.3.1",
     "framer-motion": "12.16.0",
+    "geist": "1.4.2",
     "lucide-react": "0.513.0",
     "react": "18.2.0",
     "react-code-blocks": "0.1.6",
     "react-dom": "18.2.0",
     "react-hook-form": "7.51.5",
     "react-icons": "5.2.1",
-    "react-router-dom": "6.22.2",
+    "react-router-dom": "7.6.2",
     "react-speech-recognition": "4.0.1",
     "sails-js": "0.3.1",
     "sails-js-parser": "0.3.1"
   },
   "devDependencies": {
+    "@tailwindcss/vite": "4.1.8",
     "@types/react": "18.2.33",
     "@types/react-dom": "18.2.14",
     "@types/react-speech-recognition": "3.9.6",
@@ -56,7 +59,7 @@
     "postcss": "8.5.4",
     "prettier": "3.5.3",
     "sass": "1.69.1",
-    "tailwindcss": "3.4.17",
+    "tailwindcss": "4.1.8",
     "typescript": "4.9.5",
     "vite": "4.3.9",
     "vite-plugin-eslint": "1.8.1",
