--- a/frontend/package.json
+++ b/frontend/package.json
@@ -48,25 +48,33 @@
   },
   "devDependencies": {
     "@tailwindcss/vite": "4.1.8",
+    "@types/path-browserify": "^1",
     "@types/react": "18.2.33",
     "@types/react-dom": "18.2.14",
     "@types/react-speech-recognition": "3.9.6",
-    "@vitejs/plugin-react-swc": "3.3.2",
+    "@vitejs/plugin-react-swc": "3.10.1",
+    "assert": "2.1.0",
     "autoprefixer": "10.4.21",
+    "crypto-browserify": "3.12.1",
     "eslint": "8.43.0",
     "eslint-config-react-app": "7.0.1",
+    "https-browserify": "1.0.0",
     "node-stdlib-browser": "1.2.0",
+    "os-browserify": "0.3.0",
+    "path-browserify": "1.0.1",
     "postcss": "8.5.4",
     "prettier": "3.5.3",
     "sass": "1.69.1",
+    "stream-browserify": "3.0.0",
+    "stream-http": "3.2.0",
     "tailwindcss": "4.1.8",
-    "typescript": "4.9.5",
-    "vite": "4.3.9",
+    "typescript": "5.8.3",
+    "vite": "6.3.5",
     "vite-plugin-eslint": "1.8.1",
     "vite-plugin-node-stdlib-browser": "0.2.1",
-    "vite-plugin-svgr": "3.2.0",
-    "vite-plugin-top-level-await": "1.3.1",
-    "vite-plugin-wasm": "3.2.2"
+    "vite-plugin-svgr": "4.3.0",
+    "vite-plugin-top-level-await": "1.5.0",
+    "vite-plugin-wasm": "3.4.1"
   },
   "browserslist": {
     "production": [
