--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,7 +32,6 @@
     "@uiw/react-codemirror": "4.23.12",
     "axios": "1.9.0",
     "clsx": "1.2.1",
-    "dotenv": "^16.3.1",
     "framer-motion": "12.16.0",
     "geist": "1.4.2",
     "lucide-react": "0.513.0",
@@ -47,6 +46,7 @@
     "sails-js-parser": "0.3.1"
   },
   "devDependencies": {
+    "@ianvs/prettier-plugin-sort-imports": "4.4.2",
     "@tailwindcss/vite": "4.1.8",
     "@types/path-browserify": "^1",
     "@types/react": "18.2.33",
@@ -64,9 +64,11 @@
     "path-browserify": "1.0.1",
     "postcss": "8.5.4",
     "prettier": "3.5.3",
+    "prettier-plugin-tailwindcss": "0.6.12",
     "sass": "1.69.1",
     "stream-browserify": "3.0.0",
     "stream-http": "3.2.0",
+    "tailwind-merge": "3.3.0",
     "tailwindcss": "4.1.8",
     "typescript": "5.8.3",
     "vite": "6.3.5",
