--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
     "framer-motion": "12.16.0",
     "geist": "1.4.2",
     "lucide-react": "0.513.0",
+    "radix-ui": "1.4.2",
     "react": "18.2.0",
     "react-code-blocks": "0.1.6",
     "react-dom": "18.2.0",
