--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -23,6 +23,9 @@
     "paths": {
       "@/*": [
         "./src/*"
+      ],
+      "@public/*": [
+        "./public/*"
       ]
     },
     "types": [
